--- a/src/index.css
+++ b/src/index.css
@@ -307,6 +307,14 @@ h3{
   max-width: 480px;
   box-sizing: border-box;
 }
+.descItems{
+  display: flex;
+  margin-left: 2rem;
+}
+.descItems2{
+  margin-left: auto;  
+  margin-right: 2rem;
+}
 .menu-image{
   object-fit: cover;
   width: 200px;
