--- a/src/index.css
+++ b/src/index.css
@@ -293,6 +293,16 @@ h3{
   padding: 1rem;
   background-color: beige;
   border-radius: 2rem;
+  display: block;
+}
+.menu_items2{
+  display: flex;
+  grid-gap: 20px; 
+  width: 100%;
+  height: auto;
+  margin-left: 2rem;
+  flex-wrap: wrap;
+  
 }
 .menu_items{
   display: grid;
@@ -301,7 +311,6 @@ h3{
 }
 .menuText{
   background-color: white;
-  padding: 0.5rem;
   box-shadow: 2px 3px 8px black;
   width: 100%;
   max-width: 480px;
@@ -342,11 +351,11 @@ h3{
   margin-bottom: 10px;
 }
 .menu_description{
-  width: 20rem;
+  width: 25rem;
   text-align: start;
   padding: 0 1rem 0 1rem;
   border-radius: 2rem;
-  font-size: 18px;
+  font-size: 22px;
 }
 article{
   border-radius: 1rem;
