--- a/src/index.css
+++ b/src/index.css
@@ -175,7 +175,7 @@ header{
   background-color: rgb(48, 48, 40);
   text-align: center;
   padding: 1rem 2rem 0rem 2rem;
-  /* background-image: url("logo/banner(1).jpg"); */
+  background-image: url("logo/banner(1).jpg"); 
   background-repeat: no-repeat; /* Prevent the image from repeating */
   background-size: cover; /* Scale the image to cover the entire area */
   background-position: center center;
@@ -290,10 +290,8 @@ h3{
   border-radius: 0.5rem;
 }
 .bc_menu{
-  padding: 1rem;
   background-color: beige;
   border-radius: 2rem;
-  display: block;
 }
 .menu_items2{
   display: flex;
@@ -302,7 +300,6 @@ h3{
   height: auto;
   margin-left: 2rem;
   flex-wrap: wrap;
-  
 }
 .menu_items{
   display: grid;
@@ -351,11 +348,12 @@ h3{
   margin-bottom: 10px;
 }
 .menu_description{
-  width: 25rem;
+  width: 23rem;
   text-align: start;
   padding: 0 1rem 0 1rem;
   border-radius: 2rem;
   font-size: 22px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 article{
   border-radius: 1rem;
